made limit offset optional for list subscriptions